Fixes #2536 - Long tag list in manage overviews/SLAs/triggers/report profiles/time accounting doesn't wrap

--- a/app/assets/stylesheets/zammad.scss
+++ b/app/assets/stylesheets/zammad.scss
@@ -8898,8 +8898,12 @@ label + .wizard-buttonList {
 
 .horizontal-filter-body {
   display: flex;
-  flex-wrap: wrap;
+  flex-wrap: nowrap;
   flex: 1;
+
+  .controls:not(.js-value) {
+    flex-shrink: 0;
+  }
 }
 
 .horizontal-filter-group {
